--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 streamlit
-google-generativeai
 python-dotenv
 PyPDF2
+langchain
+langchain-groq
+langchain_community
+faiss-cpu
+langchain-text-splitters
+sentence-transformers
+InstructorEmbedding
+langchain-huggingface
